<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="OMVFragment.SNMPFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="8dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
        <Switch
            android:layout_margin="8dp"
            android:id="@+id/swithEnable"
            android:text="Enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="8dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Location"
                android:imeActionId="@+id/etPort"
                android:imeActionLabel="Location"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contact"
                android:imeActionId="@+id/etPort"
                android:imeActionLabel="Contact"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:text="Version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            />

        <Spinner

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerVersion"
            />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LayoutV3">

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:imeActionId="@+id/etPort"
                    android:imeActionLabel="Username"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/etSecurityLevel"
                android:text="@string/SecurityLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Spinner

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerSecurityLevel"
                />
            <TextView
                android:id="@+id/tvAuthentificationType"
                android:text="@string/AuthentificationType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Spinner

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerAnthentificationType"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAuthPassphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Authentification passphrase"
                    android:imeActionId="@+id/etPort"
                    android:imeActionLabel="Authentification passphrase"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvPrivacyType"
                android:text="@string/PrivacyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Spinner

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerPrivacyType"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPrivacyPassphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Privacy passphrase"
                    android:imeActionId="@+id/etPort"
                    android:imeActionLabel="Privacy passphrase"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etCommunity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Community"
                android:imeActionId="@+id/etPort"
                android:imeActionLabel="Community"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Extra options "
                android:imeActionId="@+id/etPort"
                android:imeActionLabel="Extra options"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="3"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:layout_margin="8dp"
            android:id="@+id/swithEnableTraps"
            android:text="Enable traps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTrapsPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Port "

                android:imeActionLabel="Port"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="3"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTrapsHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Host "

                android:imeActionLabel="Host"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="3"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTrapsCommunity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Community"

                android:imeActionLabel="Community"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="3"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    </ScrollView>
</FrameLayout>
